--- a/index.html
+++ b/index.html
@@ -388,11 +388,11 @@
         <div class="nav-container">
             <a href="#" class="logo">Humus Reborn — تحويل الحمأة لألواح عزل ذكية</a>
             <ul class="nav-links">
-                <li><a href="#ai">AI System</a></li>
-                <li><a href="#research">البحث العلمي</a></li>
-                <li><a href="#experiment">خطوات التجربة</a></li>
-                <li><a href="#about">عنّي</a></li>
-                <li><a class="cta" href="#ai">ابدأ التحليل</a></li>
+                <li><a href="ai.html">AI System</a></li>
+                <li><a href="res.html">البحث العلمي</a></li>
+                <li><a href="t.html">خطوات التجربة</a></li>
+                <li><a href="abt.html">عنّي</a></li>
+                <li><a class="cta" href="ai.html">ابدأ التحليل</a></li>
             </ul>
             <div class="menu-toggle">
                 <i class="fas fa-bars"></i>
@@ -406,7 +406,7 @@
             <div class="welcome-card">
                 <h1>مرحبًا بكم في رحلتنا العلمية! 🌟</h1>
                 <p>هنا نعيد اكتشاف المخلفات، ونحوّل الحمأة إلى مواد ذكية… ونستخدم الذكاء الاصطناعي ليقودنا إلى المستقبل. استعدوا لاستكشاف تجربة تجمع بين العلم، والإبداع، والشغف.</p>
-                <a href="#ai" class="cta-button">ابدأ التحليل 🤖</a>
+                <a href="ai.html" class="cta-button">ابدأ التحليل 🤖</a>
             </div>
         </div>
     </section>
@@ -421,31 +421,31 @@
         
         <div class="cards-container">
             <!-- بطاقة تجربة AI -->
-            <div class="card" data-aos="fade-up" data-aos-delay="100" onclick="location.href='#ai'">
+            <div class="card" data-aos="fade-up" data-aos-delay="100" onclick="location.href='ai.html'">
                 <h3>🤖 نظام الذكاء الاصطناعي</h3>
                 <p>حلل الخلطة، وتوقّع الخصائص، وافحص العينة بالذكاء الاصطناعي. نظام ذكي يساعد في تحليل خصائص المواد وتوقع أدائها.</p>
-                <a href="#ai" class="card-button">ابدأ التحليل</a>
+                <a href="ai.html" class="card-button">ابدأ التحليل</a>
             </div>
 
             <!-- بطاقة خطوات التجربة + الفيديو -->
-            <div class="card" data-aos="fade-up" data-aos-delay="200" onclick="location.href='#experiment'">
+            <div class="card" data-aos="fade-up" data-aos-delay="200" onclick="location.href='t.html'">
                 <h3>🔬 تجربة الإنتاج</h3>
                 <p>شاهِد تجربة تحويل الحمأة إلى ألواح عزل خطوة بخطوة. شرح مفصل للمراحل العملية مع فيديو توضيحي.</p>
-                <a href="#experiment" class="card-button">شاهد التجربة</a>
+                <a href="t.html" class="card-button">شاهد التجربة</a>
             </div>
 
             <!-- بطاقة البحث العلمي -->
-            <div class="card" data-aos="fade-up" data-aos-delay="300" onclick="location.href='#research'">
+            <div class="card" data-aos="fade-up" data-aos-delay="300" onclick="location.href='res.html'">
                 <h3>📘 البحث العلمي</h3>
                 <p>اقرأ الفروض، المنهج العلمي، الهدف، والمراجع العالمية. دراسة شاملة حول تحويل الحمأة إلى مواد عازلة ذكية.</p>
-                <a href="#research" class="card-button">اقرأ البحث</a>
+                <a href="res.html" class="card-button">اقرأ البحث</a>
             </div>
 
             <!-- بطاقة عنّي -->
-            <div class="card" data-aos="fade-up" data-aos-delay="400" onclick="location.href='#about'">
+            <div class="card" data-aos="fade-up" data-aos-delay="400" onclick="location.href='abt.html'">
                 <h3>👤 عن صاحبة المشروع</h3>
                 <p>تعرفوا على Botta، رؤيتها، خبرتها، ولماذا اختارت هذا الموضوع. شغف بالبحث العلمي والتكنولوجيا.</p>
-                <a href="#about" class="card-button">اعرف أكتر</a>
+                <a href="abt.html" class="card-button">اعرف أكتر</a>
             </div>
         </div>
     </section>
@@ -454,10 +454,10 @@
     <footer>
         <div class="footer-content">
             <div class="footer-links">
-                <a href="#ai">AI System</a>
-                <a href="#research">البحث العلمي</a>
-                <a href="#experiment">خطوات التجربة</a>
-                <a href="#about">عنّي</a>
+                <a href="ai.html">AI System</a>
+                <a href="res.html">البحث العلمي</a>
+                <a href="t.html">خطوات التجربة</a>
+                <a href="abt.html">عنّي</a>
             </div>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -520,4 +520,5 @@
         });
     </script>
 </body>
+
 </html>
